[package]
name = "u2"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission-rpc = "0.3.3"
reqwest = { version = "0.11.2", features = ["cookies"] }
tokio = { version = "1.3", features = ["full"] }
select = "0.5.0"
regex = "1.4.3"
rss = "1.10.0"
futures = "0.3.13"