[package]
name = "u2"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1.3", features = ["full"] }
select = "0.5.0"
regex = "1.4.3"
rss = "1.10.0"
futures = "0.3.13"
serde = { version = "1.0.124", features = ["derive"] }
enum-iterator = "0.6.0"
toml = "0.5.8"
crossterm = "0.19.0"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
sysinfo = "0.16.4"